--- a/especialidades.html
+++ b/especialidades.html
@@ -55,7 +55,22 @@
                     <h1 title="Fideos verdes con salsa blanca">
                         Fideos verdes con salsa blanca
                     </h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga porro voluptas consequuntur itaque doloremque est veritatis a sunt? Reprehenderit, illum quibusdam alias soluta quae odit, modi nam numquam exercitationem ducimus ad eveniet. Libero itaque officiis, aspernatur architecto odio explicabo molestias, neque minus labore recusandae a commodi qui error? Nesciunt deserunt ipsam nam quidem corrupti magnam modi culpa repellendus sequi officiis exercitationem error excepturi, vel explicabo minima odio facere quaerat hic enim alias consequuntur. Molestias distinctio dolorum quis fugiat optio rerum vero, tenetur officiis incidunt atque magni, provident delectus deleniti voluptas id placeat repudiandae temporibus nemo tempora commodi dolore cumque illo. Sequi at neque delectus dolor, nihil dolorem quasi culpa laborum perspiciatis reprehenderit nostrum consequuntur porro soluta minima ratione corrupti ex sint molestias, voluptate tempora deserunt enim debitis eaque praesentium. Soluta eius id labore deserunt praesentium numquam excepturi temporibus ut accusamus beatae voluptatem fugiat sit distinctio omnis laudantium necessitatibus rerum, maxime animi eos nostrum dignissimos? Dicta omnis laboriosam sunt id non fuga aut vitae sequi iste, enim facilis dolor, atque, et commodi aperiam debitis perferendis doloribus ut quae veritatis doloremque cumque! Suscipit magni assumenda, deleniti iste eveniet autem atque quis explicabo porro modi labore! Commodi, porro deserunt nam perferendis necessitatibus non.</p>
+                        <p>Nuestro producto de Fideos verdes puedes combinarlo con una salsa blanca exquisita. Para eso solo necesitamos:</p>
+                        <ul>
+                            <li>Un pote chico de crema de leche</li>
+                            <li>Un saborizador de verdeo</li>
+                            <li>Un puñado de queso parmesano</li>
+                        </ul>
+                        <p>
+                            Una vez que tenemos estos ingredientes hacemos los siguiente:
+                        </p>
+                        <ol>
+                            <li>Vertimos el pote de crema de leche sobre el fuego</li>
+                            <li>Luego de que la crema tomo temperatura, aplicamos el saborizador de verdeo y revolvemos para que se disuelva y se impregne a la crema</li>
+                            <li>Aplicamos el queso parmesamos para que se intregue también a la crema de leche</li>
+                            <li>Por úlitmo, una vez finalizada nuestra salsa blanca, la vertemos sobre nuestros fideos verdes y revolvemos</li>
+                        </ol>
+                        <p>¡Listo! Nuestro plato está terminado para ser servido</p>
                 </div>
                 <img src="./images/fideos-verdes.jpg" alt="Imagen de fideos verdes" title="Fideos verdes con salsa blanca">
             </div>
@@ -63,15 +78,48 @@
                 <div>
                     <a id="sorrentinosReceta"></a>
                     <h1>Sorrentinos de jamon y queso</h1>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae fuga ipsa cum sint ea, quisquam nostrum architecto exercitationem, sequi modi harum blanditiis officiis odio explicabo. Reprehenderit, magnam! Eligendi optio necessitatibus quidem repellendus quia? Natus rerum tempore facilis maiores, incidunt quo officiis quae dignissimos cupiditate. Soluta suscipit harum, eaque doloribus voluptate exercitationem illo nemo vero dolorem ullam in nisi quos aut numquam at sequi placeat quis voluptatibus? Sint quis maxime exercitationem aperiam laudantium temporibus perferendis reprehenderit fugiat molestiae dolorem neque nemo, odit nostrum debitis saepe in similique? Dolore sit voluptate, deserunt culpa quasi ratione quas eos, placeat cum harum rem eveniet, distinctio iure. Beatae consectetur ipsa, esse facilis repudiandae temporibus asperiores sunt dolores rerum voluptatem illum, omnis, libero ab. Sequi fugiat provident illo nihil. Maiores mollitia expedita, facilis voluptatem, obcaecati debitis voluptate voluptas repudiandae voluptatibus unde laborum. Earum eligendi vero saepe incidunt enim doloremque deserunt beatae alias. Itaque sequi distinctio corrupti ducimus placeat quasi saepe repellendus ad. Quisquam debitis perspiciatis optio, tenetur facilis incidunt fugiat. At pariatur sunt alias adipisci vitae veritatis illo omnis, minima provident velit fugiat quis cumque tempore saepe, illum necessitatibus rem inventore vel ipsum commodi beatae, ratione deleniti. Vero voluptates sed iste consectetur, temporibus in obcaecati quam?</p>
+                        <p>Nuestro producto de Sorrentinos de jamón y queso puedes combinarlo con una salsa roja exquisita. Para eso solo necesitamos:</p>
+                        <ul>
+                            <li>1 caja de puré de tomate</li>
+                            <li>1 cebolla</li>
+                            <li>Ajo</li>
+                            <li>Perejil</li>
+                            <li>Zanahoria</li>
+                            <li>Laurel</li>
+                            <li>Sal y pimienta</li>
+                        </ul>
+                        <p>Una vez que tenemos estos ingredientes, debemos hacer lo siguiente:</p>
+                        <ol>
+                            <li>Hacer un sofrito con todos los ingredientes picados</li>
+                            <li>Luego agregamos el puré de tomate, el laurel y salpimentamos a gusto</li>
+                            <li>Dejamos cocinar a fuego bajo 20 minutos</li>
+                            <li>Luego, aplicamos nuestra salsa roja sobre nuestros sorrentinos de jamón y queso</li>
+                        </ol>
+                        <p>¡Listo! Nuestro plato está terminado para ser servido</p>
                 </div>
                 <img src="./images/sorrentinos-jamon-queso.jpg" alt="Imagen de sorrentinos de jamon y queso con salsa roja" title="Sorrentinos de jamón y queso">
             </div>
             <div class="cardEsp">
                 <div>
                     <a id="panzottisReceta"></a>
-                    <h1>Panzottis de ricota y nuez</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga porro voluptas consequuntur itaque doloremque est veritatis a sunt? Reprehenderit, illum quibusdam alias soluta quae odit, modi nam numquam exercitationem ducimus ad eveniet. Libero itaque officiis, aspernatur architecto odio explicabo molestias, neque minus labore recusandae a commodi qui error? Nesciunt deserunt ipsam nam quidem corrupti magnam modi culpa repellendus sequi officiis exercitationem error excepturi, vel explicabo minima odio facere quaerat hic enim alias consequuntur. Molestias distinctio dolorum quis fugiat optio rerum vero, tenetur officiis incidunt atque magni, provident delectus deleniti voluptas id placeat repudiandae temporibus nemo tempora commodi dolore cumque illo. Sequi at neque delectus dolor, nihil dolorem quasi culpa laborum perspiciatis reprehenderit nostrum consequuntur porro soluta minima ratione corrupti ex sint molestias, voluptate tempora deserunt enim debitis eaque praesentium. Soluta eius id labore deserunt praesentium numquam excepturi temporibus ut accusamus beatae voluptatem fugiat sit distinctio omnis laudantium necessitatibus rerum, maxime animi eos nostrum dignissimos? Dicta omnis laboriosam sunt id non fuga aut vitae sequi iste, enim facilis dolor, atque, et commodi aperiam debitis perferendis doloribus ut quae veritatis doloremque cumque! Suscipit magni assumenda, deleniti iste eveniet autem atque quis explicabo porro modi labore! Commodi, porro deserunt nam perferendis necessitatibus non.</p>
+                    <h1>Panzottis de ricota y nuez con salsa blanca y panceta ahumada</h1>
+                        <p>Nuestro producto de Panzottis de ricota y nuez puedes combinarlo con una salsa blanca de champignones exquisita. Para eso solo necesitamos:</p>
+                        <ul>
+                            <li>20 gramos de manteca</li>
+                            <li>Una cebolla morada</li>
+                            <li>150 gramos de panceta ahumada</li>
+                            <li>Un pote chico de crema de leche</li>
+                            <li>100 centrímetos cúbitos de vino blanco</li>
+                            <li>Sal y pimienta</li>
+                        </ul>
+                        <p>Una vez que tenemos estos ingredientes, debemos hacer lo siguiente:</p>
+                        <ol>
+                            <li>Hacer sofrito con la panceta ahumada picada y la cebolla morada</li>
+                            <li>Agregar la crema de leche con el vino blanco</li>
+                            <li>Dejar cocinar 10 minutos a fuego lento y salpimentar a gusto</li>
+                            <li>Luego, aplicamos nuestra salsa blanca con panceta ahumada en nuestros Panzottis de ricota y nuez</li>
+                        </ol>
+                        <p>¡Listo! Nuestro plato está terminado para ser servido</p>
                 </div>
                 <img src="./images/panzottis-ricota-nuez.jpg" alt="Imagen de fideos verdes" title="Panzottis de ricota y nuez">
             </div>
@@ -82,9 +130,9 @@
         <div class="container">
             <nav class="row">
                 <!--Logo-->
-                <li class="col-3 list-unstyled font-weight-bold text-reset text-uppercase">ROMA PASTAS</li>
+                <li class="col-lg-3 col-sm-6 col-xs-6 list-unstyled font-weight-bold text-reset text-uppercase">ROMA PASTAS</li>
                 <!--Menu-->
-                <ul class="col-3 font-weight-bold text-uppercase list-unstyled text-reset">
+                <ul class="col-lg-3 col-sm-6 col-xs-6 font-weight-bold text-uppercase list-unstyled text-reset">
                     <li>
                         <a class="text-reset text-decoration-none" href="index.html">Inicio</a>
                     </li>
@@ -101,17 +149,17 @@
                         <a class="text-reset text-decoration-none" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <div class="col-3">
+                <div class="col-lg-3 col-sm-6 col-xs-6">
                     <li class="list-unstyled font-weight-bold text-uppercase">DIRECCIÓN</li>
                     <p>Francisco Pinzón 205, B° 21 de Julio, Carrodilla, Luján de Cuyo. Mendoza - Argentina</p>
                 </div>
-                <ul class="col-3 list-unstyled">
-                    <li class="font-weight-bold text-uppercase">REDES SOCIALES</li>
+                <ul class="col-lg-3 col-sm-6 col-xs-6">
+                    <li class="list-unstyled font-weight-bold text-uppercase">REDES SOCIALES</li>
                     <li class="row">
-                        <a href="https://www.instagram.com/romapastas_/" class="text-reset">
+                        <a href="https://www.instagram.com/romapastas_/" class="text-reset" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
-                        <a href="https://wa.me/message/5FXB2SFI32RNF1" class="text-reset">
+                        <a href="https://wa.me/message/5FXB2SFI32RNF1" class="text-reset" target="_blank">
                             <i class="fa-brands fa-whatsapp"></i>
                         </a> 
                     </li>
