--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <main class="contenido">
         <div class="contenidoIndex">
             <div class="contenidoIndex-texto">
-                <h1>Pastas caseras congeladas</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur in quos autem magnam, sint exercitationem fugiat nemo, culpa ipsum, ipsam quo est ullam repellendus cupiditate. Quaerat corrupti corporis voluptatem, tempora vitae dolore modi impedit eum vero minus architecto neque sed obcaecati itaque non debitis asperiores reprehenderit quibusdam assumenda in alias?</p>
+                <h1>ROMA PASTAS</h1>
+                    <p>Queremos que disfrutes de unas ricas pastas caseras sin tener que elaborarlas. Es por eso que ofrecemos nuestros productos congelados y listos para cocinarlos. Requiere solamente de 3 a 5 minutos de hervor para que la pasta se cocine al dente. Poseemos distintas elaboraciones como fideos, sorrentinos y panzottis. Dentro de cada uno de ellos vas a encontrar las mejores variedades con sus combinaciones</p>
             </div>
             <div>
                     <img src="./images/fideos.jpg" alt="imagen de fideos" title="Fideos" class="img">
@@ -65,9 +65,9 @@
         <div class="container">
             <nav class="row">
                 <!--Logo-->
-                <li class="col-3 list-unstyled font-weight-bold text-reset text-uppercase">ROMA PASTAS</li>
+                <li class="col-lg-3 col-sm-6 col-xs-6 list-unstyled font-weight-bold text-reset text-uppercase">ROMA PASTAS</li>
                 <!--Menu-->
-                <ul class="col-3 font-weight-bold text-uppercase list-unstyled text-reset">
+                <ul class="col-lg-3 col-sm-6 col-xs-6 font-weight-bold text-uppercase list-unstyled text-reset">
                     <li>
                         <a class="text-reset text-decoration-none" href="index.html">Inicio</a>
                     </li>
@@ -84,17 +84,17 @@
                         <a class="text-reset text-decoration-none" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <div class="col-3">
+                <div class="col-lg-3 col-sm-6 col-xs-6">
                     <li class="list-unstyled font-weight-bold text-uppercase">DIRECCIÓN</li>
                     <p>Francisco Pinzón 205, B° 21 de Julio, Carrodilla, Luján de Cuyo. Mendoza - Argentina</p>
                 </div>
-                <ul class="col-3 list-unstyled">
-                    <li class="font-weight-bold text-uppercase">REDES SOCIALES</li>
+                <ul class="col-lg-3 col-sm-6 col-xs-6">
+                    <li class="list-unstyled font-weight-bold text-uppercase">REDES SOCIALES</li>
                     <li class="row">
-                        <a href="https://www.instagram.com/romapastas_/" class="text-reset">
+                        <a href="https://www.instagram.com/romapastas_/" class="text-reset" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
-                        <a href="https://wa.me/message/5FXB2SFI32RNF1" class="text-reset">
+                        <a href="https://wa.me/message/5FXB2SFI32RNF1" class="text-reset" target="_blank">
                             <i class="fa-brands fa-whatsapp"></i>
                         </a> 
                     </li>
