--- a/nosotros.html
+++ b/nosotros.html
@@ -54,8 +54,7 @@
             </div>
             <div class="contenidoNosotros-texto">
                 <h1>¿Quienes somos?</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolores tempora ducimus? Vitae totam itaque quia laboriosam laborum architecto? Quis perferendis dolore aliquam aut necessitatibus quas explicabo odit odio qui, eveniet hic cum ducimus rem numquam ullam recusandae animi?Consequuntur quidem dolores quo recusandae suscipit veritatis est rem fuga expedita porro! Et, ea blanditiis beatae eligendi at pariatur cumque maxime ipsam modi, debitis accusantium, aliquid dignissimos
-                    exercitationem voluptatem possimus ullam assumenda laboriosam optio a incidunt. Aperiam nesciunt quasi eaque perferendis odio odit, at quae deleniti placeat repellat excepturi consequatur autem reiciendis, delectus sapiente eum. Excepturi mollitia fugiat ratione esse perferendis?</p>
+                    <p>Somos un emprendimiento familiar que surgió por la tradición de elaborar pastas caseras los domingos para disfrutar en familia. Seguimos el legado familiar acerca de la elaboración de la masa y lo ponemos en práctica todos los domingos en equipo. Al darnos cuenta de que nuestros productos eran bien recibidos por nuestros invitados, fue que surgió la idea de cualquier familia tenga al alcance nuestras pastas caseras. Al vender nuestros productos congelados, tienes la posibilidad de guardarlos en tu freezer y ocupar solo que vayas a necesitar. Ofrece una gran ventaja al reducir el tiempo de elaboración y conservar lo artesanal del producto</p>
             </div>
         </div>
     </main>
@@ -64,9 +63,9 @@
         <div class="container">
             <nav class="row">
                 <!--Logo-->
-                <li class="col-3 list-unstyled font-weight-bold text-reset text-uppercase">ROMA PASTAS</li>
+                <li class="col-lg-3 col-sm-6 col-xs-6 list-unstyled font-weight-bold text-reset text-uppercase">ROMA PASTAS</li>
                 <!--Menu-->
-                <ul class="col-3 font-weight-bold text-uppercase list-unstyled text-reset">
+                <ul class="col-lg-3 col-sm-6 col-xs-6 font-weight-bold text-uppercase list-unstyled text-reset">
                     <li>
                         <a class="text-reset text-decoration-none" href="index.html">Inicio</a>
                     </li>
@@ -83,17 +82,17 @@
                         <a class="text-reset text-decoration-none" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <div class="col-3">
+                <div class="col-lg-3 col-sm-6 col-xs-6">
                     <li class="list-unstyled font-weight-bold text-uppercase">DIRECCIÓN</li>
                     <p>Francisco Pinzón 205, B° 21 de Julio, Carrodilla, Luján de Cuyo. Mendoza - Argentina</p>
                 </div>
-                <ul class="col-3 list-unstyled">
-                    <li class="font-weight-bold text-uppercase">REDES SOCIALES</li>
+                <ul class="col-lg-3 col-sm-6 col-xs-6">
+                    <li class="list-unstyled font-weight-bold text-uppercase">REDES SOCIALES</li>
                     <li class="row">
-                        <a href="https://www.instagram.com/romapastas_/" class="text-reset">
+                        <a href="https://www.instagram.com/romapastas_/" class="text-reset" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
-                        <a href="https://wa.me/message/5FXB2SFI32RNF1" class="text-reset">
+                        <a href="https://wa.me/message/5FXB2SFI32RNF1" class="text-reset" target="_blank">
                             <i class="fa-brands fa-whatsapp"></i>
                         </a> 
                     </li>
