--- a/productos.html
+++ b/productos.html
@@ -72,9 +72,9 @@
         <div class="container">
             <nav class="row">
                 <!--Logo-->
-                <li class="col-3 list-unstyled font-weight-bold text-reset text-uppercase">ROMA PASTAS</li>
+                <li class="col-lg-3 col-sm-6 col-xs-6 list-unstyled font-weight-bold text-reset text-uppercase">ROMA PASTAS</li>
                 <!--Menu-->
-                <ul class="col-3 font-weight-bold text-uppercase list-unstyled text-reset">
+                <ul class="col-lg-3 col-sm-6 col-xs-6 font-weight-bold text-uppercase list-unstyled text-reset">
                     <li>
                         <a class="text-reset text-decoration-none" href="index.html">Inicio</a>
                     </li>
@@ -91,17 +91,17 @@
                         <a class="text-reset text-decoration-none" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <div class="col-3">
+                <div class="col-lg-3 col-sm-6 col-xs-6">
                     <li class="list-unstyled font-weight-bold text-uppercase">DIRECCIÓN</li>
                     <p>Francisco Pinzón 205, B° 21 de Julio, Carrodilla, Luján de Cuyo. Mendoza - Argentina</p>
                 </div>
-                <ul class="col-3 list-unstyled">
-                    <li class="font-weight-bold text-uppercase">REDES SOCIALES</li>
+                <ul class="col-lg-3 col-sm-6 col-xs-6">
+                    <li class="list-unstyled font-weight-bold text-uppercase">REDES SOCIALES</li>
                     <li class="row">
-                        <a href="https://www.instagram.com/romapastas_/" class="text-reset">
+                        <a href="https://www.instagram.com/romapastas_/" class="text-reset" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
-                        <a href="https://wa.me/message/5FXB2SFI32RNF1" class="text-reset">
+                        <a href="https://wa.me/message/5FXB2SFI32RNF1" class="text-reset" target="_blank">
                             <i class="fa-brands fa-whatsapp"></i>
                         </a> 
                     </li>
