agrego al html contacto

--- a/contacto.html
+++ b/contacto.html
@@ -97,19 +97,19 @@
                 <!--Menu-->
                 <ul class="col-lg-3 col-sm-6 col-xs-6 font-weight-bold text-uppercase list-unstyled text-reset">
                     <li>
-                        <a class="text-reset text-decoration-none" href="index.html">Inicio</a>
+                        <a href="index.html">Inicio</a>
                     </li>
                     <li>
-                        <a class="text-reset text-decoration-none" href="productos.html">Productos</a>
+                        <a href="productos.html">Productos</a>
                     </li>
                     <li>
-                        <a class="text-reset text-decoration-none" href="especialidades.html">Especialidades</a>
+                        <a href="especialidades.html">Especialidades</a>
                     </li>
                     <li>
-                        <a class="text-reset text-decoration-none" href="nosotros.html">Nosotros</a>
+                        <a href="nosotros.html">Nosotros</a>
                     </li>
                     <li>
-                        <a class="text-reset text-decoration-none" href="contacto.html">Contacto</a>
+                        <a href="contacto.html">Contacto</a>
                     </li>
                 </ul>
                 <div class="col-lg-3 col-sm-6 col-xs-6">
