agrego archivo js

--- a/productos.html
+++ b/productos.html
@@ -43,6 +43,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="carrito.html">Realizar pedido</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -115,6 +118,8 @@
             Powered by Sebastian Brennan &copy
         </h6>
     </div>
+
+    <script src="js/compra.js"></script>
 
     <script src="js/wow.min.js"></script>
     <script>
