--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="carrito.html">Realizar pedido</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -108,6 +111,8 @@
             Powered by Sebastian Brennan &copy
         </h6>
     </div>
+
+    <script src="js/compra.js"></script>
 
     <script src="js/wow.min.js"></script>
     <script>
