--- a/nosotros.html
+++ b/nosotros.html
@@ -42,6 +42,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="carrito.html">Realizar pedido</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -107,6 +110,8 @@
         </h6>
     </div>
 
+    <script src="js/compra.js"></script>
+    
     <script src="js/wow.min.js"></script>
     <script>
        new WOW().init();
