agrego carrito js

--- a/carrito.html
+++ b/carrito.html
@@ -54,10 +54,15 @@
     </nav>
 
     <main class="contenido">
-        <div class="contenidoCarrito">
+        <!-- <div class="contenidoCarrito">
             <h2 class="item-carrito">¡Bienvenido/a!</h2>
             <h4 class="item-carrito">Para realizar su pedido toque en el botón "Comprar productos"</h4>
             <button id="Productos" class="btn btn-carrito">Comprar productos</button>
+        </div> -->
+        <div class="contenidoCarrito d-flex justify-content-center">
+            <div id="row" class="row mb-3">
+
+            </div>
         </div>
     </main>
 
@@ -109,8 +114,9 @@
         </h6>
     </div>
 
+    <script src="js/productos.js"></script>
     <script src="js/compra.js"></script>
-
+    
     <script src="js/wow.min.js"></script>
     <script>
        new WOW().init();
