--- a/productos.html
+++ b/productos.html
@@ -55,15 +55,15 @@
         <div class="contenidoProductos">
             <h1>Productos</h>
                 <div class="contenedorCards">
-                    <a class="card" href="especialidades.html#fideosReceta">
+                    <a class="cards" href="especialidades.html#fideosReceta">
                         <h2>FIDEOS</h2>
                         <img src="./images/fideos-caseros.jpg" alt="producto fideos" title="Fideos caseros">
                     </a>
-                    <a class="card" href="especialidades.html#sorrentinosReceta">
+                    <a class="cards" href="especialidades.html#sorrentinosReceta">
                         <h2>SORRENTINOS</h2>
                         <img src="./images/sorrentinos.jpg" alt="producto sorrentinos" title="Sorrentinos caseros">
                     </a>
-                    <a class="card" href="especialidades.html#panzottisReceta">
+                    <a class="cards" href="especialidades.html#panzottisReceta">
                         <h2>PANZOTTIS</h2>
                         <img src="./images/panzottis.jpg" alt="producto panzottis" title="Panzottis caseros">
                     </a>
