fetch in progress

--- a/carrito.html
+++ b/carrito.html
@@ -114,11 +114,10 @@
         </h6>
     </div>
 
-    <script src="js/class.js"></script>
-    <script src="js/productos.js"></script>
-    <script src="js/compra.js"></script>
+    <script src="js/classes/class.js"></script>
+    <script src="js/main.js"></script>
     
-    <script src="js/wow.min.js"></script>
+    <script src="js/wow/wow.min.js"></script>
     <script>
        new WOW().init();
     </script>
