--- a/contacto.html
+++ b/contacto.html
@@ -139,10 +139,8 @@
             Powered by Sebastian Brennan &copy
         </h6>
     </div>
-
-    <script src="js/compra.js"></script>
     
-    <script src="js/wow.min.js"></script>
+    <script src="js/wow/wow.min.js"></script>
     <script>
        new WOW().init();
     </script>
