--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
         </h6>
     </div>
 
-    <script src="js/compra.js"></script>
-
-    <script src="js/wow.min.js"></script>
+    <script src="js/wow/wow.min.js"></script>
     <script>
        new WOW().init();
     </script>
